# wembed

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  TODOs.md  flake.nix  pyproject.toml
.github/workflows/: build_wheels.yml
docker_build/: Dockerfile
docker_dev/: Dockerfile
include/: wembed.h
python/: CMakeLists.txt  bindings.cpp
python/examples/: cli_example.py
src/: CMakeLists.txt  wembed.cpp
src/KNN/: CMakeLists.txt
src/KNN/include/: NNDescent.hpp
src/SNN/: CMakeLists.txt
src/SNN/include/: eign.h  snn.h
src/SNN/src/: eign.cpp  snn.cpp
src/atree/: CMakeLists.txt
src/bindings/: bindings.cpp
src/cli_drawer/: CMakeLists.txt
src/cli_embedder/: CMakeLists.txt
src/cli_embedder/src/: main.cpp
src/cli_embedder/src/util/: EmbOptions.cpp
src/cli_evaluator/: CMakeLists.txt  Options.hpp  main.cpp
src/cli_evaluator/include/: Options.hpp
src/cli_evaluator/include/metrics/: ConfigParser.hpp  EdgeDetection.hpp  EdgeSampler.hpp  GeneralGraphInfo.hpp  NodeSampler.hpp  Reconstruction.hpp  TimeParser.hpp
src/cli_evaluator/src/: main.cpp
src/cli_evaluator/src/metrics/: ConfigParser.cpp  EdgeDetection.cpp  GeneralGraphInfo.cpp  NodeSampler.cpp  Reconstruction.cpp  TimeParser.cpp
src/cli_example/: CMakeLists.txt  Options.hpp  main.cpp
src/cli_generator/: CMakeLists.txt  GirgGenerator.cpp  Options.hpp  main.cpp
src/cli_wembed/: CMakeLists.txt  Options.hpp  main.cpp
src/drawLib/: CMakeLists.txt
src/drawLib/include/: SFMLDrawer.hpp
src/drawLib/src/: SFMLDrawer.cpp  ThickLine.cpp
src/embeddingLib/: CMakeLists.txt
src/embeddingLib/include/dVec/: DVec.hpp  VecList.hpp  VectorOperations.hpp
src/embeddingLib/include/embedder/: EmbedderInterface.hpp  EmbedderOptions.hpp  EmbedderParameters.hpp  LayeredEmbedder.hpp  NewWEmbedEmbedder.hpp  WEmbedEmbedder.hpp
src/embeddingLib/include/embeddingIO/: EmbeddingIO.hpp
src/embeddingLib/include/embeddingSpace/: Additive.hpp  Embedding.hpp  WeightedGeometric.hpp
src/embeddingLib/include/partition/: LabelPropagation.hpp
src/embeddingLib/include/spacialQuery/: ATreeQueries.hpp  KNNQueries.hpp  RTree.hpp  SNNQueries.hpp  SpacialIndex.hpp  SprkQueries.hpp  WeightedIndex.hpp  WeightedRTree.hpp
src/embeddingLib/src/embedder/: AbstractSimpleEmbedder.cpp  HierarchyEmbedder.cpp  LayeredEmbedder.cpp  NewWEmbedEmbedder.cpp  SimpleSamplingEmbedder.cpp  WEmbedEmbedder.cpp
src/embeddingLib/src/embeddingIO/: EmbeddingIO.cpp
src/embeddingLib/src/embeddingSpace/: Additive.cpp  MercatorEmbedding.cpp  WeightedGeometric.cpp
src/embeddingLib/src/gradientOptimizer/: AdamOptimizer.cpp
src/embeddingLib/src/partition/: GraphHierarchy.cpp  LabelPropagation.cpp
src/embeddingLib/src/spacialQuery/: ATreeQueries.cpp  SNNQueries.cpp  SprkQueries.cpp  WeightedIndex.cpp  WeightedRTree.cpp
src/evaluationLib/: CMakeLists.txt
src/evaluationLib/include/metrics/: NodeSampler.hpp  Reconstruction.hpp
src/evaluationLib/src/metrics/: EdgeDetection.cpp  NodeSampler.cpp  Reconstruction.cpp
src/graphLib/include/graph/: Graph.hpp  GraphAlgorithms.hpp
src/graphLib/include/graphIO/: GraphIO.hpp
src/graphLib/src/graph/: GeometricGraphSampler.cpp  Graph.cpp  GraphAlgorithms.cpp
src/graphLib/src/graphIO/: GraphIO.cpp
src/sprk/: CMakeLists.txt
src/utilLib/include/: Rand.hpp  StringManipulation.hpp  Toolkit.hpp
src/utilLib/src/: Rand.cpp
tests/: CMakeLists.txt  TestMetrics.cpp  TestWeightedRTree.cpp
