[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "wembed"
version = "0.1.0"
authors = [
  { name = "Jean-Pierre von der Heydt", email = "heydt@kit.edu" },
  { name = "Nikolai Maas", email = "nikolai.maas@kit.edu" },
]
description="WEmbed python bindings to calculate weighted node embeddings"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[tool.scikit-build]
minimum-version = "0.10"
wheel.license-files = ["LICENSE"]
cmake.build-type = "Release"
build.targets = ["wembed_python"]
install.components = ["python"]

[tool.cibuildwheel]
build = "cp38* cp39* cp310* cp311* cp312* cp313*"
skip = "*macosx* *win* *i686* *musllinux*"
linux.before-all = """
yum update -y && yum install -y git wget cmake python3-devel &&
curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable &&
source $HOME/.cargo/env &&
wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz &&
tar -xzf eigen-3.4.0.tar.gz &&
cd eigen-3.4.0 &&
mkdir build &&
cd build &&
cmake .. &&
make install &&
cd ../..
"""
linux.environment = {PATH = "$HOME/.cargo/bin:$PATH"}
